--- a/welcome.html
+++ b/welcome.html
@@ -1,10 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-Hello, World!
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Veridian Dynamics</title>
+    </head>
+    <body>
+        <header>
+            <h1>Welcome to Veridian Dynamics</h1>
+            <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong>technology.</strong></p>
+            <hr>
+        </header>
+        <main>
+            <section>
+                <h2>Core Values</h2>
+                <ul>
+                    <li>content</li>
+                    <li>content</li>
+                    <li>content</li>
+                </ul>
+                <h2>Our Process</h2>
+                <ol>
+                    <li>content</li>
+                    <li>content</li>
+                    <li>content</li>
+                </ol>
+                <h2>20/20 Vision</h2>
+                <ul>
+                    <li>content</li>
+                    <li>content</li>
+                    <li>content</li>
+                </ul>
+                <hr>
+            </section>
+            <section>
+                <h2>Company Vision</h2>
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+                <img src="#" alt="">
+            </section>
+        </main>
+    </body>
 </html>
