--- a/welcome.html
+++ b/welcome.html
@@ -39,6 +39,39 @@
                 <img src="#" alt="">
                 <img src="#" alt="">
             </section>
+            <section>
+                <table>
+                    <thead>
+                        <tr>
+                            <th>Plan</th>
+                            <th>Price</th>
+                            <th>Features</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Starter</td>
+                            <td>$99</td>
+                            <td>Base Technology</td>
+                        </tr>
+                        <tr>
+                            <td>Advanced</td>
+                            <td>$199</td>
+                            <td>Additional Features</td>
+                        </tr>
+                        <tr>
+                            <td>Premium</td>
+                            <td>$499</td>
+                            <td>Ulimited Support</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </section>
         </main>
+        <footer>
+            <p><em>All products come with our quality guarantee&trade;</em></p>
+            <br>
+            <a href="#top">Go to the top of the page.</a>
+        </footer>
     </body>
 </html>
