--- a/welcome.html
+++ b/welcome.html
@@ -34,10 +34,10 @@
             </section>
             <section>
                 <h2>Company Vision</h2>
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
-                <img src="#" alt="">
+                <img src="img/laptop.jpeg" alt="Women using laptop">
+                <img src="img/man-nature.jpeg" alt="man sitting on rock">
+                <img src="img/meeting.jpeg" alt="people in meeting">
+                <img src="img/sunset.jpeg" alt="a sunset">
             </section>
             <section>
                 <table>
