add width and height

--- a/welcome.html
+++ b/welcome.html
@@ -34,10 +34,11 @@
             </section>
             <section>
                 <h2>Company Vision</h2>
-                <img src="img/laptop.jpeg" alt="Women using laptop">
-                <img src="img/man-nature.jpeg" alt="man sitting on rock">
-                <img src="img/meeting.jpeg" alt="people in meeting">
-                <img src="img/sunset.jpeg" alt="a sunset">
+                <img width="200px" src="img/laptop.jpeg" alt="Women using laptop">
+                <img width="200px" src="img/man-nature.jpeg" alt="man sitting on rock">
+                <br>
+                <img width="200px" src="img/meeting.jpeg" alt="people in meeting">
+                <img width="200px" height="100px" src="img/sunset.jpeg" alt="a sunset">
             </section>
             <section>
                 <table>
