--- a/welcome.html
+++ b/welcome.html
@@ -14,21 +14,21 @@
             <section>
                 <h2>Core Values</h2>
                 <ul>
-                    <li>content</li>
-                    <li>content</li>
-                    <li>content</li>
+                    <li>Competence</li>
+                    <li>Involvement</li>
+                    <li>Technology</li>
                 </ul>
                 <h2>Our Process</h2>
                 <ol>
-                    <li>content</li>
-                    <li>content</li>
-                    <li>content</li>
+                    <li>Plan</li>
+                    <li>Evaluate</li>
+                    <li>Implement</li>
                 </ol>
                 <h2>20/20 Vision</h2>
                 <ul>
-                    <li>content</li>
-                    <li>content</li>
-                    <li>content</li>
+                    <li>Become #1 in Technology</li>
+                    <li>Increase Success by 20%</li>
+                    <li>Increase Business by 30%</li>
                 </ul>
                 <hr>
             </section>
