--- a/welcome.html
+++ b/welcome.html
@@ -34,13 +34,14 @@
             </section>
             <section>
                 <h2>Company Vision</h2>
-                <img width="200px" src="img/laptop.jpeg" alt="Women using laptop">
-                <img width="200px" src="img/man-nature.jpeg" alt="man sitting on rock">
+                <img width="400px" height="300px" src="img/laptop.jpeg" alt="Women using laptop">
+                <img width="400px" src="img/man-nature.jpeg" alt="man sitting on rock">
                 <br>
-                <img width="200px" src="img/meeting.jpeg" alt="people in meeting">
-                <img width="200px" height="100px" src="img/sunset.jpeg" alt="a sunset">
+                <img width="400px" src="img/meeting.jpeg" alt="people in meeting">
+                <img width="400px" height="266.8" src="img/sunset.jpeg" alt="a sunset">
             </section>
             <section>
+                <br>
                 <table>
                     <thead>
                         <tr>
