--- a/github.html
+++ b/github.html
@@ -18,18 +18,17 @@
     </header>
     <main>
         <section>
-            <img href="#" alt="">
-            <nav>
-                <ul>
-                    <a href="#"><li>Repositories</li></a>
-                    <a href="#"><li>People</li></a>
-                    <a href="#"><li>Teams</li></a>
-                    <a href="#"><li>Projects</li></a>
-                    <a href="#"><li>Settings</li></a>
-                </ul>
-            </nav>
+            <img src="http://placeholder.pics/svg/30" alt="placeholder image">
         </section>
-        <section
+        <section>
+            <h3><a href="#">Repositories</a></h3>
+        </section>
+        <section>
+            <h3><a href="#">People</a></h3>
+        </section>
+        <section>
+            <h3><a href="#">Teams</a></h3>
+        </section>
     </main>
 </body>
 </html>
