--- a/welcome.html
+++ b/welcome.html
@@ -7,7 +7,7 @@
     <body>
         <header>
             <h1>Welcome to Veridian Dynamics</h1>
-            <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong>technology.</strong></p>
+            <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
             <hr>
         </header>
         <main>
@@ -24,7 +24,7 @@
                     <li>Evaluate</li>
                     <li>Implement</li>
                 </ol>
-                <h2>20/20 Vision</h2>
+                <h2>2020 Vision</h2>
                 <ul>
                     <li>Become #1 in Technology</li>
                     <li>Increase Success by 20%</li>
@@ -64,7 +64,7 @@
                         <tr>
                             <td>Premium</td>
                             <td>$499</td>
-                            <td>Ulimited Support</td>
+                            <td>Unlimited Support</td>
                         </tr>
                     </tbody>
                 </table>
@@ -73,7 +73,7 @@
         <footer>
             <p><em>All products come with our quality guarantee&trade;</em></p>
             <br>
-            <a href="#top">Go to the top of the page.</a>
+            <a href="#">Go to the top of the page.</a>
         </footer>
     </body>
 </html>
