--- a/welcome.html
+++ b/welcome.html
@@ -5,6 +5,7 @@
         <title>Veridian Dynamics</title>
     </head>
     <body>
+        <div id="top"></div>
         <header>
             <h1>Welcome to Veridian Dynamics</h1>
             <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
@@ -73,7 +74,7 @@
         <footer>
             <p><em>All products come with our quality guarantee&trade;</em></p>
             <br>
-            <a href="#">Go to the top of the page.</a>
+            <a href="#top">Go to the top of the page.</a>
         </footer>
     </body>
 </html>
