--- a/github.html
+++ b/github.html
@@ -9,10 +9,10 @@
         <nav>
             <img src="http://placeholder.pics/svg/30" alt="placeholder image">
             <ul>
-                <li>Pull requests</li>
-                <li>Issues</li>
-                <li>Marketplace</li>
-                <li>Explore</li>
+                <li><a href="#">Pull requests</a></li>
+                <li><a href="#">Issues</a></li>
+                <li><a href="#">Marketplace</a></li>
+                <li><a href="#">Explore</a></li>
             </ul>
         </nav>
     </header>
@@ -25,10 +25,68 @@
         </section>
         <section>
             <h3><a href="#">People</a></h3>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Codeup's dev team</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><img src="http://placeholder.pics/svg/48" alt="placeholder image"></td>
+                        <td><a href="#">Kent Beck</a></td>
+                        <td>KentBeck</td>
+                        <td>Member</td>
+                        <td>1 team</td>
+                    </tr>
+                    <tr>
+                        <td><img src="http://placeholder.pics/svg/48" alt="placeholder image"></td>
+                        <td><a href="#">Codeup Instruction Staff</a></td>
+                        <td>CodeupInstructors </td>
+                        <td>Member</td>
+                        <td>1 team</td>
+                    </tr>
+                    <tr>
+                        <td><img src="http://placeholder.pics/svg/48" alt="placeholder image"></td>
+                        <td><a href="#">Martin Fowler</a></td>
+                        <td>Member</td>
+                        <td>0 teams</td>
+                    </tr>
+                </tbody>
+            </table>
         </section>
         <section>
             <h3><a href="#">Teams</a></h3>
         </section>
+        <section>
+            <h3><a href="#">Settings</a></h3>
+        </section>
+        <footer>
+            <section>
+                <p>© 2018 GitHub, Inc.</p>
+                <nav>
+                    <ul>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Security</a></li>
+                        <li><a href="#">Status</a></li>
+                        <li><a href="#">Help</a></li>
+                    </ul>
+                </nav>
+            </section>
+            <section>
+                <nav>
+                    <ul>
+                        <li><a href="#">Contact GitHub</a></li>
+                        <li><a href="#">API</a></li>
+                        <li><a href="#">Training</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">About</a></li>
+                    </ul>
+                </nav>
+            </section>
+        </footer>
     </main>
 </body>
 </html>
