add different types of forms

--- a/forms.html
+++ b/forms.html
@@ -2,10 +2,58 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Veridian Dynamics</title>
+    <title>Register With Us</title>
 </head>
     <body>
+        <header>
+            <h1>Veridian Dynamics</h1>
+        </header>
+        <main>
+            <form method="POST" action="https://request-inspector.glitch.me/">
 
+                <label for="email">
+                    Email<input id="email" name="email" type="text" placeholder="Enter your email here">
+                </label>
+                <br>
+
+                <label for="password">
+                    Password<input id="password" name="password" type="password" placeholder="Enter your password here">
+                </label>
+                <br>
+
+                <h3>Bio</h3>
+                <label for="bio"><br>
+                    <textarea id="bio" name="bio">Give us a short description of yourself!</textarea>
+                </label>
+                <br>
+
+                <h3>How did you hear about us?</h3><br>
+                <label for ="billboard">
+                    Billboard<input id="billboard" type="radio" name="about" value="billboard">
+                </label><br>
+                <label for ="radio-advertisement">
+                    Radio Advertisement<input id="radio-advertisement" type="radio" name="about" value="radio-advertisement">
+                </label><br>
+                <label for ="internet-advertisement">
+                    Internet Advertisement<input id="internet-advertisement" type="radio" name="about" value="internet-advertisement">
+                </label><br>
+                <label for ="other">
+                    Other<input id="other" type="radio" name="about" value="other">
+                </label><br>
+
+                <h3>Which web browser are you using?</h3><br>
+                <label for="web-browser">
+                    <select id="web-browser" name="web-browser">
+                        <option value="chrome">Chrome</option>
+                        <option value="firefox">Firefox</option>
+                        <option value="internet-explorer">Interent Explorer</option>
+                    </select>
+                </label>
+                <br>
+
+                <input type="submit">
+            </form>
+        </main>
 
     </body>
 </html>
