--- a/welcome.html
+++ b/welcome.html
@@ -3,12 +3,13 @@
     <head>
         <meta charset="UTF-8">
         <title>Veridian Dynamics</title>
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div id="top"></div>
-        <header>
-            <h1 class="fancy-header">Welcome to Veridian Dynamics</h1>
+        <header class="fancy-header">
+            <h1>Welcome to Veridian Dynamics</h1>
             <p>At Veridian Dynamics, <strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
             <hr>
         </header>
