--- a/welcome.html
+++ b/welcome.html
@@ -14,7 +14,7 @@
             <hr>
         </header>
         <main>
-            <section>
+            <section class="list">
                 <h2>Core Values</h2>
                 <ul>
                     <li>Competence</li>
