--- a/welcome.html
+++ b/welcome.html
@@ -35,9 +35,9 @@
                 </ul>
                 <hr>
             </section>
-            <section>
+            <section class="company-vision">
                 <h2>Company Vision</h2>
-                <img width="400px" height="300px" src="img/laptop.jpeg" alt="Women using laptop">
+                <img width="400px" height="266.8px" src="img/laptop.jpeg" alt="Women using laptop">
                 <img width="400px" src="img/man-nature.jpeg" alt="man sitting on rock">
                 <br>
                 <img width="400px" src="img/meeting.jpeg" alt="people in meeting">
