--- a/flex-form.html
+++ b/flex-form.html
@@ -27,9 +27,9 @@
     </form>
 </div>
 <video autoplay loop class="puppiness">
-    <source src="flex-form/cover/puppiness.webm">
-    <source src="flex-form/cover/puppiness.mp4">
-    <source src="flex-form/cover/puppiness.ogv">
+    <source src="cover/puppiness.webm">
+    <source src="cover/puppiness.mp4">
+    <source src="cover/puppiness.ogv">
 </video>
 </body>
 </html>
