--- a/mondrian.html
+++ b/mondrian.html
@@ -6,16 +6,18 @@
         <title>Mondrian</title>
     </head>
     <body>
-                <main class="grid-container">
-                    <div class="blue-1"></div>
-                    <div class="red-1"></div>
-                    <div class="yellow-1"></div>
-                    <div class="white-1"></div>
-                    <div class="white-2"></div>
-                    <div class="white-3"></div>
-                    <div class="blue-2"></div>
-                    <div class="red-2"></div>
-                    <div class="yellow-2"></div>
-                </main>
+        <div></div>
+        <main class="grid-container">
+            <div class="blue-1"></div>
+            <div class="red-1"></div>
+            <div class="yellow-1"></div>
+            <div class="white-1"></div>
+            <div class="white-2"></div>
+            <div class="white-3"></div>
+            <div class="blue-2"></div>
+            <div class="red-2"></div>
+            <div class="yellow-2"></div>
+        </main>
+        <div></div>
     </body>
 </html>
