--- a/order-pizza.html
+++ b/order-pizza.html
@@ -28,6 +28,10 @@
             <h1 class="px-0">Welcome to Pizza World!</h1>
             </section>
 
+
+
+
+
             <h2>Build your own pizza!</h2>
             <ul class="nav nav-tabs">
                 <li class="nav-item">
@@ -130,14 +134,117 @@
                         </li>
                     </ul>
                 </div>
+                <!-- Next Step button-->
 
-
-
-
-
-
+                <div class="card-footer text-right">
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-primary">Previous Step</button>
+                    <button type="button" class="btn btn-primary">Next Step</button>
+                </div>
+                </div>
             </section>
 
+
+            <section class="card">
+                <h5 class="card-header bg-primary text-white">Choose Toppings</h5>
+                <!--Card 1-->
+                <div class="card-body">
+                    <ul class="list-group">
+<!--Card Heading-->
+                        <li class="bg-light list-group-item">
+                            <h5 class="card-title">Choose Meats</h5>
+                        </li>
+<!-- Item 1-->
+                        <li class="list-group-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="beef" id="beef">
+                                <label class="form-check-label" for="beef">
+                                    Beef
+                                </label>
+                            </div>
+                        </li>
+<!--Item 2-->
+                        <li class="list-group-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="ham" id="ham">
+                                <label class="form-check-label" for="ham">
+                                    Ham
+                                </label>
+                            </div>
+                        </li>
+<!--Item 3-->
+                        <li class="list-group-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="steak" id="steak">
+                                <label class="form-check-label" for="steak">
+                                    Philly Steak
+                                </label>
+                            </div>
+                        </li>
+<!--Item 4-->
+                        <li class="list-group-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="bacon" id="bacon"> <label class="form-check-label" for="bacon">
+                                    Bacon
+                                </label>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+
+                <!--Card 2-->
+                <div class="card-body">
+                    <ul class="list-group">
+                        <!--Card Heading-->
+                        <li class="bg-light list-group-item">
+                            <h5 class="card-title">Choose Non-Meats</h5>
+                        </li>
+                        <!--Item 1-->
+                        <li class="list-group-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="green" id="green">
+                                <label class="form-check-label" for="green">
+                                    Green Peppers
+                                </label>
+                            </div>
+
+                        </li>
+                        <!--Item 2-->
+                        <li class="list-group-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="mushrooms" id="mushrooms">
+                                <label class="form-check-label" for="mushrooms">
+                                    Mushrooms
+                                </label>
+                            </div>
+                        </li>
+                        <!--Item 3-->
+                        <li class="list-group-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="onions" id="onions">
+                                <label class="form-check-label" for="onions">
+                                    Onions
+                                </label>
+                        </li>
+                        <!--Item 4-->
+                        <li class="list-group-item">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="jalapeno" id="jalapeno">
+                                <label class="form-check-label" for="jalapeno">
+                                    Jalapeno Peppers
+                                </label>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="card-footer text-right">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-primary">Checkout</button>
+                        <button type="button" class="btn btn-primary"><i class="fas fa-shopping-cart"></i></button>
+                    </div>
+                </div>
+            </section>
+<!--Checkout button-->
 
 
         </main>
