--- a/loops.html
+++ b/loops.html
@@ -5,6 +5,6 @@
         <title>While Loops</title>
     </head>
     <body>
-    <script src="js/break_and_continue.js"></script>
+    <script src="js/for_loops.js"></script>
     </body>
 </html>
