--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -65,7 +65,7 @@
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
 
-            subParagraphs[0].innerHTML = 'Mission Accomplished';
+            subParagraphs[0].innerText = 'Mission Accomplished';
     // })();
 </script>
 </body>
