--- a/mapbox-4.html
+++ b/mapbox-4.html
@@ -20,7 +20,7 @@
         center: [-98.4916, 29.4252]
     });
 
-    geocode("Whitefish, Montana", mapboxToken).then(function(result) {
+    geocode("San Antonio, TX", mapboxToken).then(function(result) {
         console.log(result);
         map.setCenter(result);
         map.setZoom(10);
