--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -5,6 +5,18 @@
 </head>
 <body>
 
+<h1 id="title" class="title codeup">This is the title</h1>
+
+<p id="paragraph" class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet dolor est itaque laboriosam, laudantium nulla quos reprehenderit unde. Ad adipisci aliquid corporis culpa exercitationem, incidunt labore non numquam odio repellat reprehenderit veniam. Accusamus alias aliquid aut blanditiis dolore enim eum excepturi in iure, molestiae mollitia quidem tempore ut voluptatem voluptatum?</p>
+
+<ul id="ul-list" class="ul-list">
+    <li id="li-item1" class="codeup">List item 1</li>
+    <li id="li-item2" class="codeup">List item 2</li>
+    <li id="li-item3">List item 3</li>
+</ul>
+
+<div id="div1">I'm a div</div>
+
 
 
 <script src="js/jquery-2.2.4.js"></script>
